--- a/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
+++ b/DMSDriver/DMSDriver/Resources/Storyboards/Route.storyboard
@@ -158,15 +158,15 @@
                                             <outlet property="lblTitle" destination="ocU-yS-FVE" id="zlH-hF-jGH"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RouteListRowCell" rowHeight="207" id="XUw-wt-fQK" customClass="RouteListCell" customModule="DMSDriver" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="90" width="375" height="207"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="RouteListRowCell" rowHeight="244" id="XUw-wt-fQK" customClass="RouteListCell" customModule="DMSDriver" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="90" width="375" height="244"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XUw-wt-fQK" id="Thz-y7-owt">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="207"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="244"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="l7d-RM-iiR">
-                                                    <rect key="frame" x="10" y="10" width="355" height="195"/>
+                                                    <rect key="frame" x="10" y="10" width="355" height="232"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="urj-dp-853">
                                                             <rect key="frame" x="15" y="10" width="35.5" height="19.5"/>
@@ -277,8 +277,8 @@
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gzm-jb-SfC">
                                                             <rect key="frame" x="15" y="157.5" width="325" height="18"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="End time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7Y-hN-duU">
-                                                                    <rect key="frame" x="0.0" y="-1" width="57.5" height="19.5"/>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="End time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O7Y-hN-duU">
+                                                                    <rect key="frame" x="1" y="-1" width="57.5" height="19.5"/>
                                                                     <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                                     <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -302,6 +302,34 @@
                                                                 <constraint firstAttribute="trailing" secondItem="m8q-9I-9Da" secondAttribute="trailing" constant="15" id="rBY-CW-tZt"/>
                                                             </constraints>
                                                         </view>
+                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Uzf-4V-vMd">
+                                                            <rect key="frame" x="15" y="190.5" width="325" height="18"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Driver" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nkt-T1-qez">
+                                                                    <rect key="frame" x="0.0" y="-1" width="39.5" height="19.5"/>
+                                                                    <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
+                                                                    <color key="textColor" red="0.28235294119999998" green="0.36470588240000001" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="string" keyPath="localizeKey" value="Driver"/>
+                                                                    </userDefinedRuntimeAttributes>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BdA-il-htn">
+                                                                    <rect key="frame" x="109.5" y="-1" width="200.5" height="19.5"/>
+                                                                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="trailing" secondItem="BdA-il-htn" secondAttribute="trailing" constant="15" id="DOg-ak-lF3"/>
+                                                                <constraint firstItem="nkt-T1-qez" firstAttribute="leading" secondItem="Uzf-4V-vMd" secondAttribute="leading" id="Xkt-7g-MdN"/>
+                                                                <constraint firstAttribute="height" constant="18" id="srv-pO-qd9"/>
+                                                                <constraint firstItem="nkt-T1-qez" firstAttribute="centerY" secondItem="Uzf-4V-vMd" secondAttribute="centerY" id="wIG-bA-Rpq"/>
+                                                                <constraint firstItem="BdA-il-htn" firstAttribute="centerY" secondItem="nkt-T1-qez" secondAttribute="centerY" id="xvE-H1-u4X"/>
+                                                            </constraints>
+                                                        </view>
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
@@ -311,12 +339,15 @@
                                                         <constraint firstItem="gzm-jb-SfC" firstAttribute="top" secondItem="T9g-Ee-Gbs" secondAttribute="bottom" constant="15" id="6Wk-i3-lOu"/>
                                                         <constraint firstItem="T9g-Ee-Gbs" firstAttribute="top" secondItem="Nc6-2r-NmZ" secondAttribute="bottom" constant="15" id="6sY-kn-YN0"/>
                                                         <constraint firstItem="Nc6-2r-NmZ" firstAttribute="centerY" secondItem="M6B-oX-0Kl" secondAttribute="centerY" id="Az9-ne-6hH"/>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Uzf-4V-vMd" secondAttribute="bottom" constant="15" id="Ddi-sd-6w6"/>
                                                         <constraint firstItem="Z1F-7N-Y97" firstAttribute="leading" secondItem="urj-dp-853" secondAttribute="leading" id="EpH-AP-kXz"/>
                                                         <constraint firstItem="7QL-BU-ry1" firstAttribute="top" secondItem="urj-dp-853" secondAttribute="bottom" constant="10" id="HAc-4E-xEf"/>
                                                         <constraint firstItem="T9g-Ee-Gbs" firstAttribute="top" secondItem="M6B-oX-0Kl" secondAttribute="bottom" constant="15" id="J8K-pO-5oM"/>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="JWn-qz-DmC"/>
                                                         <constraint firstItem="RZh-oP-t37" firstAttribute="leading" secondItem="FTJ-af-xJk" secondAttribute="trailing" constant="5" id="Jer-DU-ltw"/>
-                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="gzm-jb-SfC" secondAttribute="bottom" constant="15" id="N5W-iK-JCa"/>
+                                                        <constraint firstItem="Uzf-4V-vMd" firstAttribute="trailing" secondItem="gzm-jb-SfC" secondAttribute="trailing" id="Jr8-UM-Uf8"/>
+                                                        <constraint firstItem="BdA-il-htn" firstAttribute="leading" secondItem="m8q-9I-9Da" secondAttribute="leading" id="LPB-MN-Eld"/>
+                                                        <constraint firstItem="Uzf-4V-vMd" firstAttribute="top" secondItem="gzm-jb-SfC" secondAttribute="bottom" constant="15" id="Npi-8A-ujm"/>
                                                         <constraint firstAttribute="trailing" secondItem="7QL-BU-ry1" secondAttribute="trailing" id="OI7-gc-Vtk"/>
                                                         <constraint firstAttribute="trailing" secondItem="T9g-Ee-Gbs" secondAttribute="trailing" constant="15" id="SOj-7V-xcz"/>
                                                         <constraint firstItem="gzm-jb-SfC" firstAttribute="leading" secondItem="YIQ-bw-fbQ" secondAttribute="leading" id="TSo-dq-jMN"/>
@@ -337,6 +368,7 @@
                                                         <constraint firstAttribute="trailing" secondItem="RZh-oP-t37" secondAttribute="trailing" constant="15" id="qhU-Ga-5I6"/>
                                                         <constraint firstItem="UF8-Hj-JeS" firstAttribute="centerY" secondItem="urj-dp-853" secondAttribute="centerY" id="sep-co-WYU"/>
                                                         <constraint firstItem="Nc6-2r-NmZ" firstAttribute="leading" secondItem="HFW-lI-Zp3" secondAttribute="leading" id="wnF-1m-Sjo"/>
+                                                        <constraint firstItem="Uzf-4V-vMd" firstAttribute="leading" secondItem="gzm-jb-SfC" secondAttribute="leading" id="xby-Yb-Jde"/>
                                                         <constraint firstItem="urj-dp-853" firstAttribute="leading" secondItem="l7d-RM-iiR" secondAttribute="leading" constant="15" id="yEs-Ld-0uY"/>
                                                     </constraints>
                                                 </view>
@@ -352,6 +384,7 @@
                                         <connections>
                                             <outlet property="btnColor" destination="FTJ-af-xJk" id="UZW-8w-218"/>
                                             <outlet property="btnStatus" destination="RZh-oP-t37" id="Km2-WS-hW1"/>
+                                            <outlet property="lblDriver" destination="BdA-il-htn" id="TSy-na-x5w"/>
                                             <outlet property="lblEndTime" destination="m8q-9I-9Da" id="ePY-Kt-rnE"/>
                                             <outlet property="lblStartTime" destination="Xud-9l-l4v" id="wnR-a7-MUT"/>
                                             <outlet property="lblSubtitle" destination="stL-Px-rKv" id="Ofs-A0-xg2"/>
@@ -362,7 +395,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="71" id="cUM-Ja-WYY" customClass="RouteListCell" customModule="DMSDriver" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="297" width="375" height="71"/>
+                                        <rect key="frame" x="0.0" y="334" width="375" height="71"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cUM-Ja-WYY" id="kTO-sQ-5rn">
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="71"/>
